--- a/package.json
+++ b/package.json
@@ -7,22 +7,25 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "bcryptjs": "^3.0.2",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.7",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "jsonwebtoken": "^9.0.2",
-    "mysql2": "^3.12.0",
-    "sequelize": "^6.37.5"
+    "mysql2": "^3.13.0",
+    "sequelize": "^6.37.6"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/bcryptjs": "^2.4.6",
     "@types/body-parser": "^1.19.5",
     "@types/cookie-parser": "^1.4.8",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20.4.2",
+    "sequelize-cli": "^6.6.2",
     "ts-node": "^10.0.0",
     "typescript": "^4.3.2"
   }
