--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "hd-gruppo04",
   "version": "1.0.0",
-  "main": "src/app.ts",
+  "main": "dist/app.js",
   "scripts": {
-    "start": "ts-node src/app.ts"
+    "build": "tsc",
+    "start": "node dist/app.js",
+    "dev": "ts-node src/app.ts",
+    "vercel-build": "tsc && node dist/scripts/migrate.js"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
