--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ DB_USER=helpdigit_perhapslay
 DB_PASSWORD=3165100d4b292bdea37fe2ca40ffe4a2f940323d
 DB_HOST=qyja2.h.filess.io
 DB_PORT=3307
+JWT_SECRET=your_jwt_secret
