--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.6",
     "stripe": "^17.7.0",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "socket.io": "^4.7.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
