--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@types/stripe": "^8.0.416",
+    "@vercel/speed-insights": "^1.2.0",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^3.0.2",
     "body-parser": "^1.19.0",
@@ -20,9 +21,9 @@
     "pg": "^8.14.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.6",
+    "socket.io": "^4.7.2",
     "stripe": "^17.7.0",
-    "uuid": "^11.1.0",
-    "socket.io": "^4.7.2"
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
